@@ -1,16 +1,15 @@
 Package: VLMC
-Version: 1.4-1
-Date: 2015-04-16
+Version: 1.4-2
+Date: 2018-10-02
 Author: Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Title: Variable Length Markov Chains ('VLMC') Models
 Description: Functions, Classes & Methods for estimation, prediction, and
   simulation (bootstrap) of Variable Length Markov Chain ('VLMC') Models.
 Imports: stats, MASS
-Depends: R (>= 2.15.1)
 BuildResaveData: no
 License: GPL (>= 2)
 NeedsCompilation: yes
-Packaged: 2015-04-17 06:40:16 UTC; maechler
+Packaged: 2018-10-03 09:44:46 UTC; maechler
 Repository: CRAN
-Date/Publication: 2015-04-17 10:41:27
+Date/Publication: 2018-10-03 21:10:03 UTC
