@@ -1,6 +1,6 @@
-19b5ea43e1456e165f952b3a460320f2 *ChangeLog
-701b10bc71a6b136aed2e4f3173df50b *DESCRIPTION
-a7d2bce5fe793f53808cc92ad53b09b0 *NAMESPACE
+ca581c27cec90bd97b99ca85a9a755a1 *ChangeLog
+dea4881f8061da914b6d5252c0182fdb *DESCRIPTION
+9c0dbf47ef9097b472238a2815b51565 *NAMESPACE
 b5dc25f5ad2d8679f1e0c002de662349 *R/alphabet.R
 f98c21ef14f3f52a7c7336934ceeda7a *R/conversion.R
 216063f5ba0f2a108684dac9773dabd7 *R/dendrogram.R
@@ -9,7 +9,7 @@ f98c21ef14f3f52a7c7336934ceeda7a *R/conversion.R
 7ca88c5ff8a7f0270fe9279ed5014c92 *R/predict.R
 ab751034cc73d05931671cfb136f6b97 *R/rcplot.R
 f72b85c98e1fa96b64998ac6f6210c9c *R/sim.R
-c64124d001cc7f7044689c29ef8a8d2a *R/vlmc.R
+24229d01aad33f507f982b7d329a083d *R/vlmc.R
 ae65c8bbb2ff2ab02a28996a17e16755 *R/zzz.R
 b02cb5fccc9555624d6005103a2042c6 *README
 f0560cfe52455808bfe00b58ca5d1e5e *TODO
@@ -37,25 +37,25 @@ dbaa7b825500d8db9bfbb1addc3b1a14 *man/summary.vlmc.Rd
 578525a5cdb85fa9c0beba649fdf90fd *man/vlmctree.Rd
 73bcd52c2bc28bf60f0d3dff6be401e8 *src/alpha_init.h
 70d269b810d7fe74a242c6782ad5e514 *src/alphabet.h
-8f446633e7794b9fe2014fbb78570574 *src/cutoffs.c
+affd412ab1905ab70da8396f5dfc046e *src/cutoffs.c
 ce04c8c84a408c3c014b8f094ed94819 *src/data.c
-e3af4a66d4f166bc16c65a4efd794a3a *src/drawvlmc.c
-c335478b5af043746a144d19f1857319 *src/entropy.c
-7d0f25249abbac491b21a7e4d20726c6 *src/fitvlmc.c
+e46036d0657033bffca5112f7dc977d0 *src/drawvlmc.c
+072203d03b98c86ed1b5ce8a57a39bca *src/entropy.c
+5c00ed1e841a6c29b81d97353700e388 *src/fitvlmc.c
 abb7ef4a60d25c76a3f5f06053e5efa6 *src/gen.c
+05a34f3d7d970a926ead9050b812fe9d *src/init.c
 d0db2017c41db4d67888c433bec8b03d *src/init_alpha.c
 74b268bc9e32cf5b0452a43f6e0a4aea *src/io.c
-3c7f6bc6d9fb60413e5d6691a5d83791 *src/predict.c
-55ac08279e59ecaaac0136dddd4a331d *src/predict.h
+a6ddffb1701174a037bf2d107eea40f1 *src/predict.c
 d57d30a207e598e99d6916d6ec32e4cd *src/prune.c
-95a2d46a491a70bede72c345f331bc79 *src/saveload.c
-768f3066cc0a3c5beb77acb1325184a5 *src/sim.c
+43682e84bf41abb39ab40ffcd2c30ed5 *src/saveload.c
+7506cca9d7d2c466ad2f539202c101d4 *src/sim.c
 7565dafec2040e5436a8f18dfd4db2aa *src/subutil.h
 c58a5ecf5049a1421533dffb3b856688 *src/util.c
-428632e72507dbd571c6ff23860cb509 *src/vlmc.h
-2358bbd1225da83a6611e1c137c793eb *src/vlmc_data.h
+38a4dbe8d529fc3bb968b330069557ec *src/vlmc.h
+acd437e0612fd8eeabe866aab4c1e892 *src/vlmc_R_pkg.h
 2c03a915009c9b8f36e7829ad4c943e6 *src/vlmc_gen.h
-fece0145b78041f1ea5f749a41ae2a96 *src/vlmc_io.h
+b1c7623595d1b92d4beaceb812af08d1 *src/vlmc_io.h
 909ca7298da6f6d1b1d88130c995adbc *tests/AIC-etc.R
 7d6ef28b5d89c76036131b560110f9e0 *tests/AIC-etc.Rout.save
 d93e859c7a9ce5f65bc216fba8977dbb *tests/iid-cutoff.R
