@@ -1,8 +1,0 @@
-typedef enum {
-    PROBS = 1,
-    CLASS = 2,
-    ID    = 4,
-    LEVEL = 8
-} vlmc_pred_type;
-
-/* predict_vlmc(....);*/ /* --> ./predict.c */
