@@ -1,9 +1,0 @@
-/*  data utilities for vlmc ---> implementation in ./data.c */
-
-/* --- For dynload version :
-   ---  *data instead of  data[MAXLEN]
-
-   ---> ./tree_sub.c  and others  define them
-*/
-extern int data_len;
-extern int *data;
